# mega-data-factory

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  benchmark_technical_quality.py  main.py  pipeline_config.yaml  pyproject.toml  run_mdf.sh  test_commoncrawl_loader.py  test_loader_performance.py  test_technical_quality.py
configs/: example_commoncrawl.yaml  example_with_metrics.yaml  example_with_report.yaml  test_dynamic_workers.yaml  test_file_loader.yaml  z_image.yaml
docs/: ARCHITECTURE.md
loaders/: __init__.py  huggingface_loader.py
mega_data_factory/framework/: __init__.py  backend.py  base.py  config.py  executor.py  loader_worker.py  operator.py  worker.py
mega_data_factory/loaders/: __init__.py  commoncrawl_loader.py  huggingface_loader.py
models/: README.md  __init__.py  train_kmeans.py  train_quality_assessment.py
models/kmeans/: distributed_train.py
models/quality_assessment/: __init__.py  inference.py  trainer.py
operators/dedup/: __init__.py  phash_dedup.py
operators/filters/: __init__.py  quality_filter.py
operators/refiners/: __init__.py  image_clip_embedding.py  image_metadata.py  technical_quality.py  visual_degradations.py
rust/: Cargo.toml  README.md  build.sh  test.py
rust/src/: lib.rs
scripts/: generate_metrics_report.py
src/: image_ops.rs  lib.rs  text_ops.rs
webscale_multimodal_datapipeline/: cli.py
webscale_multimodal_datapipeline/framework/: __init__.py  backend.py  executor.py  operator.py  worker.py
writers/: __init__.py  iceberg_writer.py  parquet_writer.py
(+7 files in other folders)
