[package]
name = "mega-data-factory"
version = "0.1.0"
edition = "2021"

[lib]
name = "mega_data_factory_rust_operators"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
image = "0.25"
rayon = "1.11"
image_hasher = "3.0"
dom_smoothie = "0.5"
warc = "0.3"


[profile.release]
opt-level = 3
lto = true
